reset logic for frontend

--- a/src/App.css
+++ b/src/App.css
@@ -141,3 +141,18 @@
     cursor: pointer;
     background-color: hsl(0, 0%, 90%);
 }
+
+.current-user {
+    position: relative;
+}
+
+.current-user::before {
+    content: '';
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 15px;
+    position: absolute;
+    background-color: hsl(40, 10%, 75%);
+}
+
